# cardputer-atari800

./: .gitignore  CLAUDE.md  README.md  platformio.ini
boards/: m5stack-cardputer.json
docs/: file-browser-notes.md
docs/superpowers/plans/: 2026-04-20-m1-bootstrap-and-hal.md  2026-04-20-m2-core-and-first-frame.md  2026-04-22-m3-input-audio-settings.md
docs/superpowers/specs/: 2026-04-20-cardputer-atari800-design.md
lib/atari800/: library.json  port.h
lib/atari800/src/: afile.c  cfg.c  config.h  gtia.c  log.c  memory.c  memory.h  sysrom.c
lib/atari800/src/roms/: altirra_basic.h  altirra_os_xl.h
lib/atari800_port/: library.json
lib/atari800_port/src/: port_impl.cpp
src/: main.cpp  port_display.cpp  port_impl.cpp
src/audio/: audio_console_speaker.c  audio_console_speaker.h  audio_out.cpp  audio_out.h  audio_pcm.c  audio_pcm.h  pokey_fast.c  pokey_fast.h  pokey_glue.c  pokey_glue.h
src/display/: dirty_lines.c  dirty_lines.h  lcd.cpp  lcd.h  palette.cpp  palette.h  projector.cpp  projector.h  renderer.cpp  renderer.h  screenshot.cpp  screenshot.h
src/input/: input_port.cpp  input_port.h  joystick.c  joystick.h  keymap.c  keymap.h  mode.c  mode.h
src/roms/: rom_args.c  rom_args.h
src/settings/: settings.c  settings.h
src/storage/: loader.cpp  loader.h
src/timing/: frame_pacer.c  frame_pacer.h
src/ui/: rom_browser.cpp  rom_browser.h  rom_browser_model.c  rom_browser_model.h
test/: CMakeLists.txt  README.md  test_audio_config.c  test_audio_console_speaker.c  test_audio_pcm.c  test_dirty_lines.c  test_frame_pacer.c  test_joystick.c  test_keymap.c  test_loader.c  test_mode.c  test_palette.c  test_pokey_fast.c  test_pokey_glue.c  test_projector.c  test_rom_args.c  test_rom_browser_model.c  test_sanity.c  test_settings.c
